// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnalyticsPage should match snapshot 1`] = `
<Connect(ErrorBoundary)>
  <Component
    flexColumn={true}
    hasPadding={true}
  >
    <Component>
      Dashboard
    </Component>
    <hr />
    <Component
      isMultiLine={true}
    >
      <Component>
        <DeveloperInstallationsChart
          data={
            Array [
              Object {
                "appId": "062a376c-f5a3-46a0-a64b-e4bc6e5af2c1",
                "appName": undefined,
                "client": "DXX",
                "created": "2019-12-03T05:33:20",
                "id": "b3c2f644-3241-4298-b320-b0398ff492f9",
                "links": Array [
                  Object {
                    "action": "GET",
                    "href": "http://dev.platformmarketplace.reapit.net/installations/b3c2f644-3241-4298-b320-b0398ff492f9",
                    "rel": "self",
                  },
                  Object {
                    "action": "GET",
                    "href": "http://dev.platformmarketplace.reapit.net/apps/062a376c-f5a3-46a0-a64b-e4bc6e5af2c1",
                    "rel": "app",
                  },
                ],
                "status": "Active",
              },
            ]
          }
        />
      </Component>
      <Component>
        <Component
          apps={
            Object {
              "data": Array [
                Object {
                  "created": "2020-02-02T10:45:57",
                  "developer": "Pete's Proptech World Ltd",
                  "developerId": "28c9ea52-7f73-4814-9e00-4e3714b8adeb",
                  "homePage": "http://google.com/abc",
                  "iconUri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/d10e790c-2bf2-40ae-9c43-82c1534bde31.png",
                  "id": "09043eb8-9e5e-4650-b7f1-f0cb62699027",
                  "links": Array [
                    Object {
                      "action": "GET",
                      "href": "http://platformdemo.reapit.net/marketplace/apps/09043eb8-9e5e-4650-b7f1-f0cb62699027",
                      "rel": "self",
                    },
                    Object {
                      "action": "GET",
                      "href": "http://platformdemo.reapit.net/marketplace/developers/28c9ea52-7f73-4814-9e00-4e3714b8adeb",
                      "rel": "developer",
                    },
                  ],
                  "name": "test",
                  "summary": "nXXT2zaK807ysWgy8F0WEhIYRP3TgosAtfuiLtQCImoSx0kynxbIF0nkGHU36Oz13kM3DG0Bcsicr8L6eWFKLBg4axlmiOEWcvwHAbBP9LRvoFkCl58k1wjhOExnpaZItEyOT1AXVKv8PE44aMGtVz",
                },
                Object {
                  "created": "2020-02-02T10:45:57",
                  "developer": "Pete's Proptech World Ltd",
                  "developerId": "28c9ea52-7f73-4814-9e00-4e3714b8adeb",
                  "homePage": "http://www.contoso.com/path",
                  "iconUri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/1d38c5ec-e3c0-4138-9fe0-e77bce4034d1.octet-stream",
                  "id": "261da083-cee2-4f5c-a18f-8f9375f1f5af",
                  "links": Array [
                    Object {
                      "action": "GET",
                      "href": "http://platformdemo.reapit.net/marketplace/apps/261da083-cee2-4f5c-a18f-8f9375f1f5af",
                      "rel": "self",
                    },
                    Object {
                      "action": "GET",
                      "href": "http://platformdemo.reapit.net/marketplace/developers/28c9ea52-7f73-4814-9e00-4e3714b8adeb",
                      "rel": "developer",
                    },
                  ],
                  "name": "asd",
                  "summary": "asdQiiAJTmXGxPin7pwUiCsepZWXz1EJS71eGlvgPKH4hpE6J8DRDpzP2kDdOwpQPr4aHCCwWwxBJwzARLa7wMpJh5J61GhmQjLfKZkcDd47L9WEfQYVYAj0DTPJP0BuUMAAg2",
                },
              ],
              "pageCount": 2,
              "pageNumber": 1,
              "pageSize": 2,
              "totalCount": 6,
            }
          }
          stats={Object {}}
        />
      </Component>
    </Component>
    <DeveloperTrafficTable
      apps={
        Object {
          "data": Array [
            Object {
              "created": "2020-02-02T10:45:57",
              "developer": "Pete's Proptech World Ltd",
              "developerId": "28c9ea52-7f73-4814-9e00-4e3714b8adeb",
              "homePage": "http://google.com/abc",
              "iconUri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/d10e790c-2bf2-40ae-9c43-82c1534bde31.png",
              "id": "09043eb8-9e5e-4650-b7f1-f0cb62699027",
              "links": Array [
                Object {
                  "action": "GET",
                  "href": "http://platformdemo.reapit.net/marketplace/apps/09043eb8-9e5e-4650-b7f1-f0cb62699027",
                  "rel": "self",
                },
                Object {
                  "action": "GET",
                  "href": "http://platformdemo.reapit.net/marketplace/developers/28c9ea52-7f73-4814-9e00-4e3714b8adeb",
                  "rel": "developer",
                },
              ],
              "name": "test",
              "summary": "nXXT2zaK807ysWgy8F0WEhIYRP3TgosAtfuiLtQCImoSx0kynxbIF0nkGHU36Oz13kM3DG0Bcsicr8L6eWFKLBg4axlmiOEWcvwHAbBP9LRvoFkCl58k1wjhOExnpaZItEyOT1AXVKv8PE44aMGtVz",
            },
            Object {
              "created": "2020-02-02T10:45:57",
              "developer": "Pete's Proptech World Ltd",
              "developerId": "28c9ea52-7f73-4814-9e00-4e3714b8adeb",
              "homePage": "http://www.contoso.com/path",
              "iconUri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/1d38c5ec-e3c0-4138-9fe0-e77bce4034d1.octet-stream",
              "id": "261da083-cee2-4f5c-a18f-8f9375f1f5af",
              "links": Array [
                Object {
                  "action": "GET",
                  "href": "http://platformdemo.reapit.net/marketplace/apps/261da083-cee2-4f5c-a18f-8f9375f1f5af",
                  "rel": "self",
                },
                Object {
                  "action": "GET",
                  "href": "http://platformdemo.reapit.net/marketplace/developers/28c9ea52-7f73-4814-9e00-4e3714b8adeb",
                  "rel": "developer",
                },
              ],
              "name": "asd",
              "summary": "asdQiiAJTmXGxPin7pwUiCsepZWXz1EJS71eGlvgPKH4hpE6J8DRDpzP2kDdOwpQPr4aHCCwWwxBJwzARLa7wMpJh5J61GhmQjLfKZkcDd47L9WEfQYVYAj0DTPJP0BuUMAAg2",
            },
          ],
          "pageCount": 2,
          "pageNumber": 1,
          "pageSize": 2,
          "totalCount": 6,
        }
      }
      stats={Object {}}
    />
    <Component
      developer={
        Object {
          "developerData": Object {
            "data": Object {
              "data": Array [
                Object {
                  "created": "2020-02-02T10:45:57",
                  "developer": "Pete's Proptech World Ltd",
                  "developerId": "28c9ea52-7f73-4814-9e00-4e3714b8adeb",
                  "homePage": "http://google.com/abc",
                  "iconUri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/d10e790c-2bf2-40ae-9c43-82c1534bde31.png",
                  "id": "09043eb8-9e5e-4650-b7f1-f0cb62699027",
                  "links": Array [
                    Object {
                      "action": "GET",
                      "href": "http://platformdemo.reapit.net/marketplace/apps/09043eb8-9e5e-4650-b7f1-f0cb62699027",
                      "rel": "self",
                    },
                    Object {
                      "action": "GET",
                      "href": "http://platformdemo.reapit.net/marketplace/developers/28c9ea52-7f73-4814-9e00-4e3714b8adeb",
                      "rel": "developer",
                    },
                  ],
                  "name": "test",
                  "summary": "nXXT2zaK807ysWgy8F0WEhIYRP3TgosAtfuiLtQCImoSx0kynxbIF0nkGHU36Oz13kM3DG0Bcsicr8L6eWFKLBg4axlmiOEWcvwHAbBP9LRvoFkCl58k1wjhOExnpaZItEyOT1AXVKv8PE44aMGtVz",
                },
                Object {
                  "created": "2020-02-02T10:45:57",
                  "developer": "Pete's Proptech World Ltd",
                  "developerId": "28c9ea52-7f73-4814-9e00-4e3714b8adeb",
                  "homePage": "http://www.contoso.com/path",
                  "iconUri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/1d38c5ec-e3c0-4138-9fe0-e77bce4034d1.octet-stream",
                  "id": "261da083-cee2-4f5c-a18f-8f9375f1f5af",
                  "links": Array [
                    Object {
                      "action": "GET",
                      "href": "http://platformdemo.reapit.net/marketplace/apps/261da083-cee2-4f5c-a18f-8f9375f1f5af",
                      "rel": "self",
                    },
                    Object {
                      "action": "GET",
                      "href": "http://platformdemo.reapit.net/marketplace/developers/28c9ea52-7f73-4814-9e00-4e3714b8adeb",
                      "rel": "developer",
                    },
                  ],
                  "name": "asd",
                  "summary": "asdQiiAJTmXGxPin7pwUiCsepZWXz1EJS71eGlvgPKH4hpE6J8DRDpzP2kDdOwpQPr4aHCCwWwxBJwzARLa7wMpJh5J61GhmQjLfKZkcDd47L9WEfQYVYAj0DTPJP0BuUMAAg2",
                },
              ],
              "pageCount": 2,
              "pageNumber": 1,
              "pageSize": 2,
              "totalCount": 6,
            },
          },
          "loading": false,
        }
      }
      installations={
        Object {
          "installationsAppData": Object {
            "data": Array [
              Object {
                "appId": "062a376c-f5a3-46a0-a64b-e4bc6e5af2c1",
                "client": "DXX",
                "created": "2019-12-03T05:33:20",
                "id": "b3c2f644-3241-4298-b320-b0398ff492f9",
                "links": Array [
                  Object {
                    "action": "GET",
                    "href": "http://dev.platformmarketplace.reapit.net/installations/b3c2f644-3241-4298-b320-b0398ff492f9",
                    "rel": "self",
                  },
                  Object {
                    "action": "GET",
                    "href": "http://dev.platformmarketplace.reapit.net/apps/062a376c-f5a3-46a0-a64b-e4bc6e5af2c1",
                    "rel": "app",
                  },
                ],
                "status": "Active",
              },
            ],
            "pageCount": 1,
            "pageNumber": 1,
            "pageSize": 15,
            "totalCount": 1,
          },
          "loading": false,
        }
      }
      installedApps={
        Array [
          Object {
            "appId": "062a376c-f5a3-46a0-a64b-e4bc6e5af2c1",
            "appName": undefined,
            "client": "DXX",
            "created": "2019-12-03T05:33:20",
            "id": "b3c2f644-3241-4298-b320-b0398ff492f9",
            "links": Array [
              Object {
                "action": "GET",
                "href": "http://dev.platformmarketplace.reapit.net/installations/b3c2f644-3241-4298-b320-b0398ff492f9",
                "rel": "self",
              },
              Object {
                "action": "GET",
                "href": "http://dev.platformmarketplace.reapit.net/apps/062a376c-f5a3-46a0-a64b-e4bc6e5af2c1",
                "rel": "app",
              },
            ],
            "status": "Active",
          },
        ]
      }
    />
  </Component>
</Connect(ErrorBoundary)>
`;

exports[`AnalyticsPage should match when loading 1`] = `<Component />`;

exports[`InstallationTable should match snapshot 1`] = `
<div>
  <Component>
    Installations
  </Component>
  <p>
    The installations table below shows the individual installations per client with a total number of installations per app
  </p>
  <div>
    <p
      key="test"
    >
      Total current installation for 
      <strong>
        test
      </strong>
      : 
      0
    </p>
    <p
      key="asd"
    >
      Total current installation for 
      <strong>
        asd
      </strong>
      : 
      0
    </p>
  </div>
  <Component
    bordered={true}
    columns={
      Array [
        Object {
          "Header": "App Name",
          "accessor": "appName",
        },
        Object {
          "Header": "Client",
          "accessor": "client",
        },
        Object {
          "Header": "Date of installation",
          "accessor": [Function],
        },
        Object {
          "Header": "Date of Uninstallation",
          "accessor": [Function],
        },
      ]
    }
    data={
      Array [
        Object {
          "appId": "062a376c-f5a3-46a0-a64b-e4bc6e5af2c1",
          "appName": undefined,
          "client": "DXX",
          "created": "2019-12-03T05:33:20",
          "id": "b3c2f644-3241-4298-b320-b0398ff492f9",
          "links": Array [
            Object {
              "action": "GET",
              "href": "http://dev.platformmarketplace.reapit.net/installations/b3c2f644-3241-4298-b320-b0398ff492f9",
              "rel": "self",
            },
            Object {
              "action": "GET",
              "href": "http://dev.platformmarketplace.reapit.net/apps/062a376c-f5a3-46a0-a64b-e4bc6e5af2c1",
              "rel": "app",
            },
          ],
          "status": "Active",
        },
      ]
    }
    loading={false}
    scrollable={true}
  />
  <br />
  <Component
    onChange={[Function]}
    pageNumber={1}
    pageSize={5}
    totalCount={1}
  />
</div>
`;

exports[`InstallationTable should match with null developerData 1`] = `
<div>
  <Component>
    Installations
  </Component>
  <p>
    The installations table below shows the individual installations per client with a total number of installations per app
  </p>
  <div />
  <Component
    bordered={true}
    columns={
      Array [
        Object {
          "Header": "App Name",
          "accessor": "appName",
        },
        Object {
          "Header": "Client",
          "accessor": "client",
        },
        Object {
          "Header": "Date of installation",
          "accessor": [Function],
        },
        Object {
          "Header": "Date of Uninstallation",
          "accessor": [Function],
        },
      ]
    }
    data={
      Array [
        Object {
          "appId": "062a376c-f5a3-46a0-a64b-e4bc6e5af2c1",
          "appName": undefined,
          "client": "DXX",
          "created": "2019-12-03T05:33:20",
          "id": "b3c2f644-3241-4298-b320-b0398ff492f9",
          "links": Array [
            Object {
              "action": "GET",
              "href": "http://dev.platformmarketplace.reapit.net/installations/b3c2f644-3241-4298-b320-b0398ff492f9",
              "rel": "self",
            },
            Object {
              "action": "GET",
              "href": "http://dev.platformmarketplace.reapit.net/apps/062a376c-f5a3-46a0-a64b-e4bc6e5af2c1",
              "rel": "app",
            },
          ],
          "status": "Active",
        },
      ]
    }
    loading={false}
    scrollable={true}
  />
  <br />
  <Component
    onChange={[Function]}
    pageNumber={1}
    pageSize={5}
    totalCount={1}
  />
</div>
`;

exports[`InstallationTable should match with null installationsAppData 1`] = `
<div>
  <Component>
    Installations
  </Component>
  <p>
    The installations table below shows the individual installations per client with a total number of installations per app
  </p>
  <div>
    <p
      key="test"
    >
      Total current installation for 
      <strong>
        test
      </strong>
      : 
      0
    </p>
    <p
      key="asd"
    >
      Total current installation for 
      <strong>
        asd
      </strong>
      : 
      0
    </p>
  </div>
  <Component
    bordered={true}
    columns={
      Array [
        Object {
          "Header": "App Name",
          "accessor": "appName",
        },
        Object {
          "Header": "Client",
          "accessor": "client",
        },
        Object {
          "Header": "Date of installation",
          "accessor": [Function],
        },
        Object {
          "Header": "Date of Uninstallation",
          "accessor": [Function],
        },
      ]
    }
    data={
      Array [
        Object {
          "appId": "062a376c-f5a3-46a0-a64b-e4bc6e5af2c1",
          "appName": undefined,
          "client": "DXX",
          "created": "2019-12-03T05:33:20",
          "id": "b3c2f644-3241-4298-b320-b0398ff492f9",
          "links": Array [
            Object {
              "action": "GET",
              "href": "http://dev.platformmarketplace.reapit.net/installations/b3c2f644-3241-4298-b320-b0398ff492f9",
              "rel": "self",
            },
            Object {
              "action": "GET",
              "href": "http://dev.platformmarketplace.reapit.net/apps/062a376c-f5a3-46a0-a64b-e4bc6e5af2c1",
              "rel": "app",
            },
          ],
          "status": "Active",
        },
      ]
    }
    loading={false}
    scrollable={true}
  />
  <br />
  <Component
    onChange={[Function]}
    pageNumber={1}
    pageSize={5}
    totalCount={0}
  />
</div>
`;
